# lambda_cicle

./: IMPLEMENTATION_PLAN.md  README.md
lambda-cicle/: Cargo.toml
lambda-cicle/examples/: constructor_patterns.λ  fib.λ  hello.λ  io_examples.λ  lambda.λ  let.λ  list_examples.λ  map_examples.λ  nested.λ  recursive.λ  traits_examples.λ
lambda-cicle/reasoning-flows/: engineer-2026-04-02T102330.md  philosopher-2026-04-02.md
lambda-cicle/src/: lib.rs  main.rs
lambda-cicle/src/core/: desugar.rs  mod.rs  name_resolver.rs
lambda-cicle/src/core/ast/: mod.rs  patterns.rs  terms.rs  types.rs
lambda-cicle/src/core/borrow/: checker.rs
lambda-cicle/src/core/exhaustiveness/: checker.rs  mod.rs
lambda-cicle/src/modules/: export.rs  linker.rs  loader.rs  mod.rs  serializer.rs
lambda-cicle/src/runtime/: mod.rs
lambda-cicle/src/tools/: bench.rs  dot.rs  mod.rs  repl.rs  trace.rs
lambda-cicle/src/traits/: coherence.rs  mod.rs  registry.rs  resolution.rs
lambda-cicle/stdlib/: Prelude.λ
lambda-cicle/stdlib/Std/: IO.λ  List.λ  Map.λ  Show.λ  String.λ
lambda-cicle/tests/: arithmetic_intrinsics_e2e_test.rs  constructor_test.rs  decls_parser_test.rs  examples_integration_test.rs  interaction_test.rs  io_integration_test.rs  module_loading_test.rs  parser_comprehensive_test.rs  parser_test.rs  prelude_loader_test.rs  primitives_test.rs  property_tests.rs  semiring_test.rs  stdlib_parser_test.rs  string_primitives_test.rs  test_prim_call.rs
lambda-cicle/tests/quickcheck_tests/: context_test.rs  eval_test.rs  mod.rs  primitives_test.rs  semiring_test.rs  type_test.rs
(+53 files in other folders)
