[package]
name = "lambda-cicle"
version = "0.1.0"
edition = "2021"
description = "A functional programming language with linear types and interaction nets"

[dependencies]
chumsky = "0.10"
thiserror = "2"
hashbrown = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
quickcheck = "1"
insta = "1"
criterion = "0.5"
